# bfx-cpp-api

./: .gitignore  .travis.yml  BitfinexAPI.cpp  BitfinexAPI.hpp  CMakeLists.txt  Dockerfile  README.md  console-wrapper.cpp  docker-compose.yml  example.cpp  example2.cpp  key-secret  withdraw.conf
.circleci/: config.yml  config.yml.bak  install_deps.sh  run-build-locally.sh
.circleci/images/: Dockerfile
Docker/: Dockerfile
app/: CMakeLists.txt
app/doc/: definitions.json
app/include/bfx-api-cpp/: BitfinexAPI.hpp  HTTPRequest.hpp  TRequest.hpp  jsonutils.hpp
app/src/: example.cpp  test.cpp
bfx-api-cpp/: BitfinexAPI.cpp  BitfinexAPI.hpp  console-wrapper.cpp  main.cpp
bfx-api-cpp.xcodeproj/: project.pbxproj
bfx-api-cpp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
bfx-api-cpp.xcodeproj/xcuserdata/jvr23.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
bfx-api-cpp.xcodeproj/xcuserdata/jvr23.xcuserdatad/xcschemes/: bfx-api-cpp.xcscheme  xcschememanagement.plist
doc/: definitions.json  withdraw.conf
docker/: entrypoint.sh
docker/etc/: supervisord.conf
include/: BitfinexAPI.hpp  jsonutils.hpp
include/bfx-api-cpp/: BitfinexAPI.hpp  error.hpp  jsonutils.hpp
src/: example.cpp
